DT-2004-05-26-0: Bugfix:    o Moved DRMAA README into docs directory and added
                              it to distinst
                 Changed:   docs
                 Issue:     952

MD-2004-05-26-2: Bugfix:    - improved logging
                 Changed:   inst_sge

JG-2004-05.26-2: Bugfix:    Fixed memory leaks in qmaster and in commlib.
                 Review:    SG

SG-2004-05-26-1: Bugfix:    The scheduler did sometimes dispatch more jobs 
                            into a queue, than that queue had resources left.
                            This only happend in advanced reservation mode.
                 Review:    AH, DT
                 Changed:   sge_schedd

MD-2004-05-26-2: Bugfix:    -csp option does not recognize secure binaries
                 Review:    AS
                 Changed:   inst_sge
                 Issue:     1065

MD-2004-05-26-1: Bugfix:    -some small path problems
                 Review:    RH
                 Changed    inst_sge

JG-2004-05-26-1: Enhancem.: Add script and utility for checkpointing and cleanup
                            of transaction log in case of Berkeley DB spooling 
                            with RPC server.
                 Review:    pending

MD-2004-05-26-0: Bugfix:    - refixed file perms setting of /tmp/configuration
                            - MoveLog procedure
                 Review:    RH
                 Changed:   inst_sge

SG-2004-05-26-0: Bugfix:    fixed a scheduler crash. The scheduler crashed
                            when the host settings were not straight forward,
                            and not all load values were delivered.
                 Review:    AA
                 Changed:   scheduler

JG-2004-05-26-0: Bugfix:    Fixed several memory leaks in qmaster.
                 Review:    SG

JG-2004-05-25-1: Testsuite: Fixed testsuite installation in csp mode.

BD-2004-05-25-0: Bugfix:    - Use -ldb$(BDB_LIB_SUFFIX) instead of bare