@@ -1,3 +1,8 @@
+MD-2004-05-27-0: Bugfix:    - uninstall order changed
+                            - added message
+                            - fixed usage
+                 Changed    inst_sge
+
 DT-2004-05-26-0: Bugfix:    o Moved DRMAA README into docs directory and added
                               it to distinst
                  Changed:   docs
